<resources>
    <string name="app_name">AndroNES</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="play">Play</string>
    <string name="listen">Listen</string>
    <string name="game_avatar">Game Avatar</string>
    <string name="title_activity_tv">TvActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="play_with_genie">Play with Genie</string>
    <string name="add_favorite">Like</string>
    <string name="remove_favorite">Unlike</string>
    <string name="extra_published">Published by: %1$s</string>
    <string name="extra_developed">Developed by: %1$s</string>
</resources>